--- a/new.html
+++ b/new.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scele=1" />
     <title>金闪闪</title>
   </head>
-  <body> style="margin: 0;"
+  <body style="margin: 0;">
     <h1>哈哈，新页面</h1>
   </body>
 </html>
