--- a/jssjs.html
+++ b/jssjs.html
@@ -39,7 +39,7 @@
       padding: 40px;
       dont-size: 12px;
     ">
-    <p style="color:#ffd700;"">金闪闪的网站</p> 
+    <p style="color:#ffd700;">金闪闪的网站</p> 
     <a href="https://kangwenchang.com/">老师的网址</a> 
     </div> 
   </body>
